Refactor and enhance search system with categories, settings, and sorting
- Introduced `ISearchSettings` to manage search modes, categories, sorting options, and configurations such as Levenshtein distance.
- Expanded `Queastor` functionality to support search categories and apply sorting based on relevance, namespace, or alphabetical order.
- Updated `SearchWindow` with toggle buttons for filtering search categories and a user-friendly "No results" message.
- Modified `SearchTextBox` to include settings button with contextual functionality.
- Enhanced `Queastor` and unit tests to align with the new search settings.
- Added styles for `ToggleButton` and other UI updates for seamless integration.

--- a/Arcanum.UI/Assets/ArcanumShared/DefaultPalette.xaml
+++ b/Arcanum.UI/Assets/ArcanumShared/DefaultPalette.xaml
@@ -11,6 +11,7 @@
     <Color x:Key = "RowAlternatingColor"> #757373 </Color>
     <Color x:Key = "BlueSelectionBackColor"> #2e436e </Color>
     <Color x:Key = "AggressiveRedBackColor"> #e81123 </Color>
+    <Color x:Key = "BlueAccentColor"> #3574f0 </Color>
     <Color x:Key = "GreenColor"> #528d57 </Color>
 
     <SolidColorBrush x:Key = "GreenColorBrush"
@@ -27,6 +28,8 @@
                      Color = "{StaticResource SelectedBackColor}" />
     <SolidColorBrush x:Key = "BlueSelectionBackColorBrush"
                      Color = "{StaticResource BlueSelectionBackColor}" />
+    <SolidColorBrush x:Key = "BlueAccentColorBrush"
+                     Color = "{StaticResource BlueAccentColor}" />
     <SolidColorBrush x:Key = "DarkerSelectedBackColorBrush"
                      Color = "{StaticResource DarkerSelectedBackColor}" />
     <SolidColorBrush x:Key = "RowAlternatingColorColorBrush"
