--- a/Arcanum.UI/OldApp.xaml
+++ b/Arcanum.UI/OldApp.xaml
@@ -23,6 +23,7 @@
                 <ResourceDictionary Source="Components/Styles/Base/BaseGridSplitter.xaml" />
                 <ResourceDictionary Source="Components/Styles/Base/BaseContextMenu.xaml" />
                 <ResourceDictionary Source="Components/Styles/Base/BaseToggleButton.xaml" />
+                <ResourceDictionary Source="Components/Styles/Base/BaseTreeView.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
