Integrate step undo/redo functionality and add command execution checks
- Implemented `StepUndoCommand` and `StepRedoCommand` in `MainWindow`.
- Added command execution checks `CanStepUndoExecute` and `CanStepRedoExecute` based on history state.
- Updated XAML bindings to use newly added command checks.
- Introduced `CanStepUndo` and `CanStepRedo` properties in `TreeHistoryManager`.
- Commented out redundant sample history node creation in `HistoryTreeView`.

--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -78,10 +78,10 @@
                         CanExecute = "CommandCanAlwaysExecute" />
         <CommandBinding Command = "mainWindow:MwCommands.StepUndoCommand"
                         Executed = "StepUndoCommand_Executed"
-                        CanExecute = "CommandCanAlwaysExecute" />
+                        CanExecute = "CommandCanStepUndoExecute" />
         <CommandBinding Command = "mainWindow:MwCommands.StepRedoCommand"
                         Executed = "StepRedoCommand_Executed"
-                        CanExecute = "CommandCanAlwaysExecute" />
+                        CanExecute = "CommandCanStrepRedoExecute" />
         <CommandBinding Command = "mainWindow:MwCommands.OpenHistoryWindowCommand"
                         Executed = "OpenHistoryWindow_OnExecuted"
                         CanExecute = "CommandCanAlwaysExecute" />
