--- a/Arcanum.UI/Components/Styles/Base/BaseScrollbar.xaml
+++ b/Arcanum.UI/Components/Styles/Base/BaseScrollbar.xaml
@@ -77,6 +77,10 @@
                 Value = "false" />
         <Setter Property = "Focusable"
                 Value = "false" />
+        <Setter Property = "MinWidth"
+                Value = "8" />
+        <Setter Property = "MinHeight"
+                Value = "6" />
         <Setter Property = "Template">
             <Setter.Value>
                 <ControlTemplate TargetType = "{x:Type Thumb}">
@@ -84,13 +88,13 @@
                             Background = "{TemplateBinding Background}"
                             BorderBrush = "{TemplateBinding BorderBrush}"
                             BorderThickness = "0"
-                            Width = "8"
                             Padding = "0"
                             Margin = "0" />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
+
 
     <ControlTemplate x:Key = "VerticalScrollBar"
                      TargetType = "{x:Type ScrollBar}">
