Add history icon to "View History" menu item and include asset in project
- Added `History16x16.png` icon to the "View History" menu item for improved visual representation.
- Updated project file to include `History16x16.png` as a resource.

--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -194,6 +194,9 @@
                 </userControls:SearchableMenuItem>
                 <userControls:SearchableMenuItem Header = "View History"
                                                  Command = "mainWindow:MwCommands.OpenHistoryWindowCommand">
+                    <userControls:SearchableMenuItem.Icon>
+                        <Image Source = "../../../Assets/Icons/16x16/History16x16.png" />
+                    </userControls:SearchableMenuItem.Icon>
                 </userControls:SearchableMenuItem>
 
                 <Separator />
